Update project file

--- a/src/ZillowAPI/appsettings.json
+++ b/src/ZillowAPI/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ZillowAPIKey": {
+    "zws-id": "X1-ZWz1dyb53fdhjf_6jziz"
+  },
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
